// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form"
  >
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput should be rendered correctly 2`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form"
  >
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-label="Icon in input"
      class="container uui-icon uui-enabled uui-control_icon"
    >
      <svg
        class=""
      />
    </div>
    <div
      class="container uui-icon uui-enabled uui-control_icon pointer uui-icon-dropdown"
    >
      <svg
        class="flipY"
      />
    </div>
  </div>
</DocumentFragment>
`;
